Refactor: Cleaned up start blog content and renamed project folder

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,21 @@
 ---
-name: Tails Azimuth
+name: David Hugh Davies
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
+occupation: IT Professional & Amateur Musician
+company: QA4IS
+email: davedavies@ymail.com
 twitter: https://twitter.com/Twitter
 linkedin: https://www.linkedin.com
 github: https://github.com
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Dave Davies is an IT Professional who has been playing the piano forever. He currently works remote and has the pleasure of playing piano at home whenever he wants.
+He generally plays by ear although he took lessons 'back in the day' and can read music but currently not sight read it.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+Wanting to develop his technique and dynamics (instead of just loud...), he is now recording his playing on his phone each time he plays.
+Being excited about Blockchain technology, he has this blog to track his progress and publish on a Blockchain whenever he decides that a recording
+is worth publishing.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+Although the recordings are basic, the naming convention of the recordings indicate the songs or highlights being followed.
+
+Publishing, searching and retrieving recordings is a future step to this blog.
